--- a/src/patternfly/base/tokens/tokens-default.scss
+++ b/src/patternfly/base/tokens/tokens-default.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Wed, 29 May 2024 15:57:12 GMT
+// Generated on Thu, 13 Jun 2024 00:55:36 GMT
 
 @mixin pf-v6-tokens {
   --pf-t--global--timing-function--300: cubic-bezier(0, 0, .2, 1);
@@ -34,7 +34,7 @@
   --pf-t--global--box-shadow--spread--100: 0px;
   --pf-t--global--box-shadow--blur--300: 24px;
   --pf-t--global--box-shadow--blur--200: 8px;
-  --pf-t--global--box-shadow--blur--100: 2px;
+  --pf-t--global--box-shadow--blur--100: 4px;
   --pf-t--global--box-shadow--Y--700: 8px;
   --pf-t--global--box-shadow--Y--600: 4px;
   --pf-t--global--box-shadow--Y--500: 1px;
@@ -63,6 +63,15 @@
   --pf-t--global--font--size--300: 16px;
   --pf-t--global--font--size--200: 14px;
   --pf-t--global--font--size--100: 12px;
+  --pf-t--global--font--line-height--200: 1.5;
+  --pf-t--global--font--line-height--100: 1.3;
+  --pf-t--global--font--weight--400: 700;
+  --pf-t--global--font--weight--300: 700;
+  --pf-t--global--font--weight--200: 500;
+  --pf-t--global--font--weight--100: 400;
+  --pf-t--global--font--family--300: "Red Hat Mono VF";
+  --pf-t--global--font--family--200: "Red Hat Display VF";
+  --pf-t--global--font--family--100: "Red Hat Text VF";
   --pf-t--global--border--radius--500: 999px;
   --pf-t--global--border--radius--400: 24px;
   --pf-t--global--border--radius--300: 16px;
@@ -106,7 +115,7 @@
   --pf-t--global--text--color--400: var(--pf-t--color--red-orange--40);
   --pf-t--global--text--color--300: var(--pf-t--color--white);
   --pf-t--global--text--color--200: var(--pf-t--color--gray--60);
-  --pf-t--global--text--color--100: var(--pf-t--color--gray--90);
+  --pf-t--global--text--color--100: var(--pf-t--color--gray--95);
   --pf-t--global--color--nonstatus--gray--300: var(--pf-t--color--gray--40);
   --pf-t--global--color--nonstatus--gray--200: var(--pf-t--color--gray--30);
   --pf-t--global--color--nonstatus--gray--100: var(--pf-t--color--gray--20);
@@ -116,15 +125,15 @@
   --pf-t--global--color--nonstatus--blue--300: var(--pf-t--color--blue--40);
   --pf-t--global--color--nonstatus--blue--200: var(--pf-t--color--blue--30);
   --pf-t--global--color--nonstatus--blue--100: var(--pf-t--color--blue--20);
-  --pf-t--global--color--nonstatus--cyan--300: var(--pf-t--color--teal--40);
-  --pf-t--global--color--nonstatus--cyan--200: var(--pf-t--color--teal--30);
-  --pf-t--global--color--nonstatus--cyan--100: var(--pf-t--color--teal--20);
+  --pf-t--global--color--nonstatus--teal--300: var(--pf-t--color--teal--40);
+  --pf-t--global--color--nonstatus--teal--200: var(--pf-t--color--teal--30);
+  --pf-t--global--color--nonstatus--teal--100: var(--pf-t--color--teal--20);
   --pf-t--global--color--nonstatus--green--300: var(--pf-t--color--green--40);
   --pf-t--global--color--nonstatus--green--200: var(--pf-t--color--green--30);
   --pf-t--global--color--nonstatus--green--100: var(--pf-t--color--green--20);
-  --pf-t--global--color--nonstatus--gold--300: var(--pf-t--color--yellow--40);
-  --pf-t--global--color--nonstatus--gold--200: var(--pf-t--color--yellow--30);
-  --pf-t--global--color--nonstatus--gold--100: var(--pf-t--color--yellow--20);
+  --pf-t--global--color--nonstatus--yellow--300: var(--pf-t--color--yellow--40);
+  --pf-t--global--color--nonstatus--yellow--200: var(--pf-t--color--yellow--30);
+  --pf-t--global--color--nonstatus--yellow--100: var(--pf-t--color--yellow--20);
   --pf-t--global--color--nonstatus--orange--300: var(--pf-t--color--orange--40);
   --pf-t--global--color--nonstatus--orange--200: var(--pf-t--color--orange--30);
   --pf-t--global--color--nonstatus--orange--100: var(--pf-t--color--orange--20);
@@ -233,6 +242,13 @@
   --pf-t--global--font--size--md: var(--pf-t--global--font--size--300);
   --pf-t--global--font--size--sm: var(--pf-t--global--font--size--200);
   --pf-t--global--font--size--xs: var(--pf-t--global--font--size--100);
+  --pf-t--global--font--line-height--heading: var(--pf-t--global--font--line-height--200);
+  --pf-t--global--font--line-height--body: var(--pf-t--global--font--line-height--100);
+  --pf-t--global--font--weight--heading: var(--pf-t--global--font--weight--300);
+  --pf-t--global--font--weight--body: var(--pf-t--global--font--weight--100);
+  --pf-t--global--font--family--mono: var(--pf-t--global--font--family--300);
+  --pf-t--global--font--family--heading: var(--pf-t--global--font--family--200);
+  --pf-t--global--font--family--body: var(--pf-t--global--font--family--100);
   --pf-t--global--border--color--300: var(--pf-t--color--gray--50);
   --pf-t--global--border--color--200: var(--pf-t--color--gray--40);
   --pf-t--global--border--color--100: var(--pf-t--color--gray--30);
@@ -270,6 +286,8 @@
   --pf-t--global--icon--size--sm: var(--pf-t--global--icon--size--100);
   --pf-t--global--spacer--button--vertical--compact: var(--pf-t--global--spacer--100);
   --pf-t--global--spacer--button--horizontal--compact: var(--pf-t--global--spacer--300);
+  --pf-t--global--spacer--control--horizontal--compact: var(--pf-t--global--spacer--200);
+  --pf-t--global--spacer--control--vertical--compact: var(--pf-t--global--spacer--100);
   --pf-t--global--spacer--4xl: var(--pf-t--global--spacer--800);
   --pf-t--global--spacer--3xl: var(--pf-t--global--spacer--700);
   --pf-t--global--spacer--2xl: var(--pf-t--global--spacer--600);
@@ -312,15 +330,15 @@
   --pf-t--global--color--nonstatus--blue--clicked: var(--pf-t--global--color--nonstatus--blue--200);
   --pf-t--global--color--nonstatus--blue--hover: var(--pf-t--global--color--nonstatus--blue--200);
   --pf-t--global--color--nonstatus--blue--default: var(--pf-t--global--color--nonstatus--blue--100);
-  --pf-t--global--color--nonstatus--cyan--clicked: var(--pf-t--global--color--nonstatus--cyan--200);
-  --pf-t--global--color--nonstatus--cyan--hover: var(--pf-t--global--color--nonstatus--cyan--200);
-  --pf-t--global--color--nonstatus--cyan--default: var(--pf-t--global--color--nonstatus--cyan--100);
+  --pf-t--global--color--nonstatus--teal--clicked: var(--pf-t--global--color--nonstatus--teal--200);
+  --pf-t--global--color--nonstatus--teal--hover: var(--pf-t--global--color--nonstatus--teal--200);
+  --pf-t--global--color--nonstatus--teal--default: var(--pf-t--global--color--nonstatus--teal--100);
   --pf-t--global--color--nonstatus--green--clicked: var(--pf-t--global--color--nonstatus--green--200);
   --pf-t--global--color--nonstatus--green--hover: var(--pf-t--global--color--nonstatus--green--200);
   --pf-t--global--color--nonstatus--green--default: var(--pf-t--global--color--nonstatus--green--100);
-  --pf-t--global--color--nonstatus--gold--clicked: var(--pf-t--global--color--nonstatus--gold--200);
-  --pf-t--global--color--nonstatus--gold--hover: var(--pf-t--global--color--nonstatus--gold--200);
-  --pf-t--global--color--nonstatus--gold--default: var(--pf-t--global--color--nonstatus--gold--100);
+  --pf-t--global--color--nonstatus--yellow--clicked: var(--pf-t--global--color--nonstatus--yellow--200);
+  --pf-t--global--color--nonstatus--yellow--hover: var(--pf-t--global--color--nonstatus--yellow--200);
+  --pf-t--global--color--nonstatus--yellow--default: var(--pf-t--global--color--nonstatus--yellow--100);
   --pf-t--global--color--nonstatus--orange--clicked: var(--pf-t--global--color--nonstatus--orange--200);
   --pf-t--global--color--nonstatus--orange--hover: var(--pf-t--global--color--nonstatus--orange--200);
   --pf-t--global--color--nonstatus--orange--default: var(--pf-t--global--color--nonstatus--orange--100);
@@ -384,15 +402,15 @@
   --pf-t--global--border--color--nonstatus--blue--clicked: var(--pf-t--global--color--nonstatus--blue--300);
   --pf-t--global--border--color--nonstatus--blue--hover: var(--pf-t--global--color--nonstatus--blue--300);
   --pf-t--global--border--color--nonstatus--blue--default: var(--pf-t--global--color--nonstatus--blue--200);
-  --pf-t--global--border--color--nonstatus--cyan--clicked: var(--pf-t--global--color--nonstatus--cyan--300);
-  --pf-t--global--border--color--nonstatus--cyan--hover: var(--pf-t--global--color--nonstatus--cyan--300);
-  --pf-t--global--border--color--nonstatus--cyan--default: var(--pf-t--global--color--nonstatus--cyan--200);
+  --pf-t--global--border--color--nonstatus--teal--clicked: var(--pf-t--global--color--nonstatus--teal--300);
+  --pf-t--global--border--color--nonstatus--teal--hover: var(--pf-t--global--color--nonstatus--teal--300);
+  --pf-t--global--border--color--nonstatus--teal--default: var(--pf-t--global--color--nonstatus--teal--200);
   --pf-t--global--border--color--nonstatus--green--clicked: var(--pf-t--global--color--nonstatus--green--300);
   --pf-t--global--border--color--nonstatus--green--hover: var(--pf-t--global--color--nonstatus--green--300);
   --pf-t--global--border--color--nonstatus--green--default: var(--pf-t--global--color--nonstatus--green--200);
-  --pf-t--global--border--color--nonstatus--gold--clicked: var(--pf-t--global--color--nonstatus--gold--300);
-  --pf-t--global--border--color--nonstatus--gold--hover: var(--pf-t--global--color--nonstatus--gold--300);
-  --pf-t--global--border--color--nonstatus--gold--default: var(--pf-t--global--color--nonstatus--gold--200);
+  --pf-t--global--border--color--nonstatus--yellow--clicked: var(--pf-t--global--color--nonstatus--yellow--300);
+  --pf-t--global--border--color--nonstatus--yellow--hover: var(--pf-t--global--color--nonstatus--yellow--300);
+  --pf-t--global--border--color--nonstatus--yellow--default: var(--pf-t--global--color--nonstatus--yellow--200);
   --pf-t--global--border--color--nonstatus--orange--clicked: var(--pf-t--global--color--nonstatus--orange--300);
   --pf-t--global--border--color--nonstatus--orange--hover: var(--pf-t--global--color--nonstatus--orange--300);
   --pf-t--global--border--color--nonstatus--orange--default: var(--pf-t--global--color--nonstatus--orange--200);
@@ -432,6 +450,10 @@
   --pf-t--global--icon--size--font--md: var(--pf-t--global--font--size--md);
   --pf-t--global--icon--size--font--sm: var(--pf-t--global--font--size--sm);
   --pf-t--global--icon--size--font--xs: var(--pf-t--global--font--size--xs);
+  --pf-t--global--spacer--action--horizontal--plain: var(--pf-t--global--spacer--sm);
+  --pf-t--global--spacer--action--horizontal--default: var(--pf-t--global--spacer--lg);
+  --pf-t--global--spacer--action--vertical--plain: var(--pf-t--global--spacer--sm);
+  --pf-t--global--spacer--action--vertical--default: var(--pf-t--global--spacer--sm);
   --pf-t--global--spacer--gap--action-to-action--plain: var(--pf-t--global--spacer--xs);
   --pf-t--global--spacer--gap--action-to-action--default: var(--pf-t--global--spacer--md);
   --pf-t--global--spacer--gap--group-to-group--vertical: var(--pf-t--global--spacer--lg);
@@ -444,10 +466,6 @@
   --pf-t--global--spacer--control--horizontal--default: var(--pf-t--global--spacer--md);
   --pf-t--global--spacer--control--vertical--plain: var(--pf-t--global--spacer--sm);
   --pf-t--global--spacer--control--vertical--default: var(--pf-t--global--spacer--sm);
-  --pf-t--global--spacer--action--horizontal--plain: var(--pf-t--global--spacer--sm);
-  --pf-t--global--spacer--action--horizontal--default: var(--pf-t--global--spacer--lg);
-  --pf-t--global--spacer--action--vertical--plain: var(--pf-t--global--spacer--sm);
-  --pf-t--global--spacer--action--vertical--default: var(--pf-t--global--spacer--sm);
   --pf-t--global--text--color--nonstatus--on-gray--clicked: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--nonstatus--on-gray--hover: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--nonstatus--on-gray--default: var(--pf-t--global--text--color--regular);
@@ -457,15 +475,15 @@
   --pf-t--global--text--color--nonstatus--on-blue--clicked: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--nonstatus--on-blue--hover: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--nonstatus--on-blue--default: var(--pf-t--global--text--color--regular);
-  --pf-t--global--text--color--nonstatus--on-cyan--clicked: var(--pf-t--global--text--color--regular);
-  --pf-t--global--text--color--nonstatus--on-cyan--hover: var(--pf-t--global--text--color--regular);
-  --pf-t--global--text--color--nonstatus--on-cyan--default: var(--pf-t--global--text--color--regular);
+  --pf-t--global--text--color--nonstatus--on-teal--clicked: var(--pf-t--global--text--color--regular);
+  --pf-t--global--text--color--nonstatus--on-teal--hover: var(--pf-t--global--text--color--regular);
+  --pf-t--global--text--color--nonstatus--on-teal--default: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--nonstatus--on-green--clicked: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--nonstatus--on-green--hover: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--nonstatus--on-green--default: var(--pf-t--global--text--color--regular);
-  --pf-t--global--text--color--nonstatus--on-gold--clicked: var(--pf-t--global--text--color--regular);
-  --pf-t--global--text--color--nonstatus--on-gold--hover: var(--pf-t--global--text--color--regular);
-  --pf-t--global--text--color--nonstatus--on-gold--default: var(--pf-t--global--text--color--regular);
+  --pf-t--global--text--color--nonstatus--on-yellow--clicked: var(--pf-t--global--text--color--regular);
+  --pf-t--global--text--color--nonstatus--on-yellow--hover: var(--pf-t--global--text--color--regular);
+  --pf-t--global--text--color--nonstatus--on-yellow--default: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--nonstatus--on-orange--clicked: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--nonstatus--on-orange--hover: var(--pf-t--global--text--color--regular);
   --pf-t--global--text--color--nonstatus--on-orange--default: var(--pf-t--global--text--color--regular);
@@ -548,15 +566,15 @@
   --pf-t--global--icon--color--nonstatus--on-blue--clicked: var(--pf-t--global--icon--color--regular);
   --pf-t--global--icon--color--nonstatus--on-blue--hover: var(--pf-t--global--icon--color--regular);
   --pf-t--global--icon--color--nonstatus--on-blue--default: var(--pf-t--global--icon--color--regular);
-  --pf-t--global--icon--color--nonstatus--on-cyan--clicked: var(--pf-t--global--icon--color--regular);
-  --pf-t--global--icon--color--nonstatus--on-cyan--hover: var(--pf-t--global--icon--color--regular);
-  --pf-t--global--icon--color--nonstatus--on-cyan--default: var(--pf-t--global--icon--color--regular);
+  --pf-t--global--icon--color--nonstatus--on-teal--clicked: var(--pf-t--global--icon--color--regular);
+  --pf-t--global--icon--color--nonstatus--on-teal--hover: var(--pf-t--global--icon--color--regular);
+  --pf-t--global--icon--color--nonstatus--on-teal--default: var(--pf-t--global--icon--color--regular);
   --pf-t--global--icon--color--nonstatus--on-green--clicked: var(--pf-t--global--icon--color--regular);
   --pf-t--global--icon--color--nonstatus--on-green--hover: var(--pf-t--global--icon--color--regular);
   --pf-t--global--icon--color--nonstatus--on-green--default: var(--pf-t--global--icon--color--regular);
-  --pf-t--global--icon--color--nonstatus--on-gold--clicked: var(--pf-t--global--icon--color--regular);
-  --pf-t--global--icon--color--nonstatus--on-gold--hover: var(--pf-t--global--icon--color--regular);
-  --pf-t--global--icon--color--nonstatus--on-gold--default: var(--pf-t--global--icon--color--regular);
+  --pf-t--global--icon--color--nonstatus--on-yellow--clicked: var(--pf-t--global--icon--color--regular);
+  --pf-t--global--icon--color--nonstatus--on-yellow--hover: var(--pf-t--global--icon--color--regular);
+  --pf-t--global--icon--color--nonstatus--on-yellow--default: var(--pf-t--global--icon--color--regular);
   --pf-t--global--icon--color--nonstatus--on-orange--clicked: var(--pf-t--global--icon--color--regular);
   --pf-t--global--icon--color--nonstatus--on-orange--hover: var(--pf-t--global--icon--color--regular);
   --pf-t--global--icon--color--nonstatus--on-orange--default: var(--pf-t--global--icon--color--regular);
@@ -608,14 +626,14 @@
   --pf-t--global--icon--color--brand--clicked: var(--pf-t--global--color--brand--clicked);
   --pf-t--global--icon--color--brand--hover: var(--pf-t--global--color--brand--hover);
   --pf-t--global--icon--color--brand--default: var(--pf-t--global--color--brand--default);
-  --pf-t--global--icon--size--font--body--lg: var(--pf-t--global--font--size--body--lg);
-  --pf-t--global--icon--size--font--body--default: var(--pf-t--global--font--size--body--default);
-  --pf-t--global--icon--size--font--body--sm: var(--pf-t--global--font--size--body--sm);
   --pf-t--global--icon--size--font--heading--h6: var(--pf-t--global--font--size--heading--h6);
   --pf-t--global--icon--size--font--heading--h5: var(--pf-t--global--font--size--heading--h5);
   --pf-t--global--icon--size--font--heading--h4: var(--pf-t--global--font--size--heading--h4);
   --pf-t--global--icon--size--font--heading--h3: var(--pf-t--global--font--size--heading--h3);
   --pf-t--global--icon--size--font--heading--h2: var(--pf-t--global--font--size--heading--h2);
   --pf-t--global--icon--size--font--heading--h1: var(--pf-t--global--font--size--heading--h1);
+  --pf-t--global--icon--size--font--body--lg: var(--pf-t--global--font--size--body--lg);
+  --pf-t--global--icon--size--font--body--default: var(--pf-t--global--font--size--body--default);
+  --pf-t--global--icon--size--font--body--sm: var(--pf-t--global--font--size--body--sm);
   --pf-t--global--color--status--read--on-secondary: var(--pf-t--global--background--color--control--default);
 }
